firebase-debug.log
[debug] [2023-05-05T15:56:24.523Z] ----------------------------------------------------------------------
[debug] [2023-05-05T15:56:24.524Z] Command:       /usr/local/bin/firebase /Users/bxss101/.cache/firebase/tools/lib/node_modules/firebase-tools/lib/bin/firebase deploy
[debug] [2023-05-05T15:56:24.525Z] CLI Version:   11.30.0
[debug] [2023-05-05T15:56:24.525Z] Platform:      darwin
[debug] [2023-05-05T15:56:24.525Z] Node Version:  v16.16.0
[debug] [2023-05-05T15:56:24.526Z] Time:          Fri May 05 2023 22:56:24 GMT+0700 (Indochina Time)
[debug] [2023-05-05T15:56:24.526Z] ----------------------------------------------------------------------
[debug] 
[debug] [2023-05-05T15:56:24.618Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2023-05-05T15:56:24.619Z] > authorizing via signed-in user (ackrawinboonpuen@gmail.com)
[debug] [2023-05-05T15:56:24.620Z] [iam] checking project ackrawinb for permissions ["firebase.projects.get","firebasehosting.sites.update"]
[debug] [2023-05-05T15:56:24.623Z] >>> [apiv2][query] POST https://cloudresourcemanager.googleapis.com/v1/projects/ackrawinb:testIamPermissions [none]
[debug] [2023-05-05T15:56:24.624Z] >>> [apiv2][(partial)header] POST https://cloudresourcemanager.googleapis.com/v1/projects/ackrawinb:testIamPermissions x-goog-quota-user=projects/ackrawinb
[debug] [2023-05-05T15:56:24.624Z] >>> [apiv2][body] POST https://cloudresourcemanager.googleapis.com/v1/projects/ackrawinb:testIamPermissions {"permissions":["firebase.projects.get","firebasehosting.sites.update"]}
[debug] [2023-05-05T15:56:25.803Z] <<< [apiv2][status] POST https://cloudresourcemanager.googleapis.com/v1/projects/ackrawinb:testIamPermissions 200
[debug] [2023-05-05T15:56:25.807Z] <<< [apiv2][body] POST https://cloudresourcemanager.googleapis.com/v1/projects/ackrawinb:testIamPermissions {"permissions":["firebase.projects.get","firebasehosting.sites.update"]}
[debug] [2023-05-05T15:56:25.809Z] >>> [apiv2][query] GET https://firebase.googleapis.com/v1beta1/projects/ackrawinb [none]
[debug] [2023-05-05T15:56:26.312Z] <<< [apiv2][status] GET https://firebase.googleapis.com/v1beta1/projects/ackrawinb 200
[debug] [2023-05-05T15:56:26.313Z] <<< [apiv2][body] GET https://firebase.googleapis.com/v1beta1/projects/ackrawinb {"projectId":"ackrawinb","projectNumber":"1020242635695","displayName":"AckrawinB","name":"projects/ackrawinb","resources":{"hostingSite":"ackrawinb"},"state":"ACTIVE","etag":"1_4deee9dd-fc4d-4112-ae94-e82dec80460e"}
[debug] [2023-05-05T15:56:36.581Z] /Users/bxss101/Documents/GitHub/my-react-portfolio/next.config.js:6
export default nextConfig
^^^^^^

SyntaxError: Unexpected token 'export'
    at Object.compileFunction (node:vm:354:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Module._compile (pkg/prelude/bootstrap.js:1890:32)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:170:29)
    at ModuleJob.run (node:internal/modules/esm/module_job:198:25)
    at async Promise.all (index 0)
[error] 
[error] Error: An unexpected error has occurred.
